@@ -1,6 +1,7 @@
 // $Id$
 
 #include "ace/Get_Opt.h"
+#include "ace/Log_Msg.h"
 #include "ace/Service_Repository.h"
 #include "ace/Service_Config.h"
 #include "ace/Service_Manager.h"
